Completing cleaning for loader